# agentic-ai

./: PROJECT_TARGET.md  README.md  第2章学习指南-反思设计模式实践.md  第3章学习指南-工具使用实战.md  第4章学习指南-构建Agentic AI的实用技巧.md  第5章工作指南-2-多智能体系统学习指南.md
courses/: 第1章学习指南-agentic工作流简介.md  第5章工作指南-1-规划模式学习指南.md
gunicorn+nvicorn/: Gunicorn+Uvicorn+Agent.md  Gunicorn详解.md  Uvicorn详解.md
novel_agent/: .env.example  .gitignore  Novel-Agent架构改进方案.md  README.md  TODO.md  pyproject.toml  test_director_parse.py  test_gunicorn_style_llm.py  test_import.py  test_new_implementation.py
novel_agent/docs/: troubleshooting.md
novel_agent/examples/: basic_usage.py
novel_agent/src/: __init__.py
novel_agent/src/agents/: __init__.py  base_agent.py  character.py  consistency_checker.py  director.py  novel_agent.py  plot_designer.py  scene_renderer.py  writing_optimizer.py
novel_agent/src/models/: __init__.py  chapter_draft.py  chapter_result.py  novel_input.py
novel_agent/src/runtime/: __init__.py  supervisor.py  worker.py
novel_agent/src/utils/: __init__.py  async_llm_client.py  config.py  llm_client.py
novel_agent/src/workflows/: novel_workflow.py
